test/org/midica/testfiles/failing/define-not-enough-args.midica
INCLUDE inc/instruments.midica

DEFINE CHORD

crd test c,d,e

0  test  /4
